--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
@@ -21,13 +21,13 @@
   <main>
     <section class="main-section">
       <div id="logo-img-div">
-        <img src="images/logo.svg" alt="">
+        <img src="logo.svg" alt="">
       </div>
 
 
       <div class="main-section-content">
         <div class="mokup-img-div">
-          <img src="images/illustration-mockups.svg" alt="">
+          <img src="illustration-mockups.svg" alt="">
         </div>
         <div class="web-content">
           <h1>Build The Community Your Fans Will Love</h1>
